Added more details of why us section

--- a/index.html
+++ b/index.html
@@ -379,19 +379,19 @@
             </div>
         </section>
 
-        <!--Meet the team Section-->
+        <!--Meet the team Section
         <section class="mx-auto lg:mx-56 bg-white">
-            <div class="absolute bg-white">
-                <div><img src="/images/banner1.png" class="w-full opacity-70"></div>
-            <div class="absolute lg:top-48 lg:left-56">
+            <div class="relative lg:absolute bg-white">
+                <div class="w-auto lg:w-full h-[1340px] lg:h-full"><img src="/images/banner1.png" class="opacity-70"></div>
+            <div class="relative lg:absolute lg:top-48 lg:left-56">
                     <div class="text-center w-auto">
                     <h1 class="lato font-extrabold text-5xl text-white">Meet the team section</h1>
                     <p class="lato font-medium text-base text-white">Contrary to popular belief, is not simply random
                         text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000
                         years old.</p> </div>
 
-                    <!--Team members slide-->
-                    <div class="flex justify-evenly">
+                    <!--Team members slide-- >
+                    <div class="flex justify-evenly flex-col lg:flex-row">
                         <div class="text-center">
                         <div class="flex justify-center">
                             <img src="/images/member1.png" class="rounded-full"></img>
@@ -448,6 +448,69 @@
                 </div>
             </div>
         </div>
+        </section> -->
+
+        <!--Why Choose Section-->
+        <section class="mx-auto lg:mx-56 bg-white">
+        <div class="lato text-center">
+            <h1 class="lato font-extrabold text-5xl text-black py-3">Why Choose Us</h1>
+            <p class="lato font-medium text-base text-paraclr">Contrary to popular belief, is not simply random text. It has roots in a piece of classical<br> Latin literature from 45 BC, making it over 2000 years old </p>
+        </div>
+
+        <!--three parts div-->
+<div>
+        <div class="flex items-center gap-6 py-6 text-start">
+            <i class="fa-solid fa-users flex bg-gray-300 rounded-full text-black w-14 h-14 justify-center items-center"></i>
+            <div>
+                <h1 class="lato font-extrabold text-2xl text-black">Dedicated Team</h1>
+                <p class="text-2xl">___________</p>
+                <p class="lato font-medium text-base text-paraclr">Professional employees are there for you to pick<br> the most amazing and fresh fruits.</p>
+            </div>
+        </div>
+        <div class="flex items-center gap-6 py-6 text-start">
+            <i class="fa-regular fa-heart flex bg-gray-300 rounded-full text-black w-14 h-14 justify-center items-center"></i>
+            <div>
+                <h1 class="lato font-extrabold text-2xl text-black">Fresh is Best</h1>
+                <p class="text-2xl">___________</p>
+                <p class="lato font-medium text-base text-paraclr">Professional employees are there for you to pick<br> the most amazing and fresh fruits.</p>
+            </div>
+        </div>
+        <div class="flex items-center gap-6 py-6 text-start">
+            <i class="fa-solid fa-gift flex bg-gray-300 rounded-full text-black w-14 h-14 justify-center items-center"></i>
+            <div>
+                <h1 class="lato font-extrabold text-2xl text-black">Gift Certificates</h1>
+                <p class="text-2xl">___________</p>
+                <p class="lato font-medium text-base text-paraclr">Professional employees are there for you to pick<br> the most amazing and fresh fruits.</p>
+            </div>
+        </div>
+</div>
+
+<div>
+    <div class="flex items-center gap-6 py-6 text-end">
+        <div>
+            <h1 class="lato font-extrabold text-2xl text-black">Integrated Supplier</h1>
+            <p class="text-2xl">___________</p>
+            <p class="lato font-medium text-base text-paraclr">Professional employees are there for you to pick<br> the most amazing and fresh fruits.</p>
+        </div>
+        <i class="fa-brands fa-raspberry-pi flex bg-gray-300 rounded-full text-black w-14 h-14 justify-center items-center"></i>
+    </div>
+    <div class="flex items-center gap-6 py-6 text-end">
+        <div>
+            <h1 class="lato font-extrabold text-2xl text-black">Sustainable Practice</h1>
+            <p class="text-2xl">___________</p>
+            <p class="lato font-medium text-base text-paraclr">Professional employees are there for you to pick<br> the most amazing and fresh fruits.</p>
+        </div>
+        <i class="fa-solid fa-users flex bg-gray-300 rounded-full text-black w-14 h-14 justify-center items-center"></i>
+    </div>
+    <div class="flex items-center gap-6 py-6 text-end">
+        <div>
+            <h1 class="lato font-extrabold text-2xl text-black">The Benefits Only</h1>
+            <p class="text-2xl">___________</p>
+            <p class="lato font-medium text-base text-paraclr">Professional employees are there for you to pick<br> the most amazing and fresh fruits.</p>
+        </div>
+        <i class="fa-solid fa-users flex bg-gray-300 rounded-full text-black w-14 h-14 justify-center items-center"></i>
+    </div>
+</div>
         </section>
     </main>
 
