complete the Why Choose section for desktop

--- a/index.html
+++ b/index.html
@@ -458,8 +458,9 @@
         </div>
 
         <!--three parts div-->
+        <div class="grid grid-cols-3 justify-center gap-6">
 <div>
-        <div class="flex items-center gap-6 py-6 text-start">
+        <div class="flex items-center gap-6 py-5 text-start">
             <i class="fa-solid fa-users flex bg-gray-300 rounded-full text-black w-14 h-14 justify-center items-center"></i>
             <div>
                 <h1 class="lato font-extrabold text-2xl text-black">Dedicated Team</h1>
@@ -467,7 +468,7 @@
                 <p class="lato font-medium text-base text-paraclr">Professional employees are there for you to pick<br> the most amazing and fresh fruits.</p>
             </div>
         </div>
-        <div class="flex items-center gap-6 py-6 text-start">
+        <div class="flex items-center gap-6 py-5 text-start">
             <i class="fa-regular fa-heart flex bg-gray-300 rounded-full text-black w-14 h-14 justify-center items-center"></i>
             <div>
                 <h1 class="lato font-extrabold text-2xl text-black">Fresh is Best</h1>
@@ -475,7 +476,7 @@
                 <p class="lato font-medium text-base text-paraclr">Professional employees are there for you to pick<br> the most amazing and fresh fruits.</p>
             </div>
         </div>
-        <div class="flex items-center gap-6 py-6 text-start">
+        <div class="flex items-center gap-6 py-5 text-start">
             <i class="fa-solid fa-gift flex bg-gray-300 rounded-full text-black w-14 h-14 justify-center items-center"></i>
             <div>
                 <h1 class="lato font-extrabold text-2xl text-black">Gift Certificates</h1>
@@ -484,9 +485,11 @@
             </div>
         </div>
 </div>
-
+<div class="py-6 w-auto h-auto">
+    <img src="images/whychoose1.png">
+</div>
 <div>
-    <div class="flex items-center gap-6 py-6 text-end">
+    <div class="flex items-center gap-6 py-5 text-end">
         <div>
             <h1 class="lato font-extrabold text-2xl text-black">Integrated Supplier</h1>
             <p class="text-2xl">___________</p>
@@ -494,23 +497,25 @@
         </div>
         <i class="fa-brands fa-raspberry-pi flex bg-gray-300 rounded-full text-black w-14 h-14 justify-center items-center"></i>
     </div>
-    <div class="flex items-center gap-6 py-6 text-end">
+    <div class="flex items-center gap-6 py-5 text-end">
         <div>
             <h1 class="lato font-extrabold text-2xl text-black">Sustainable Practice</h1>
             <p class="text-2xl">___________</p>
             <p class="lato font-medium text-base text-paraclr">Professional employees are there for you to pick<br> the most amazing and fresh fruits.</p>
         </div>
-        <i class="fa-solid fa-users flex bg-gray-300 rounded-full text-black w-14 h-14 justify-center items-center"></i>
+        <i class="fa-solid fa-ice-cream flex bg-gray-300 rounded-full text-black w-14 h-14 justify-center items-center"></i>
     </div>
-    <div class="flex items-center gap-6 py-6 text-end">
+    <div class="flex items-center gap-6 py-5 text-end">
         <div>
             <h1 class="lato font-extrabold text-2xl text-black">The Benefits Only</h1>
             <p class="text-2xl">___________</p>
             <p class="lato font-medium text-base text-paraclr">Professional employees are there for you to pick<br> the most amazing and fresh fruits.</p>
         </div>
-        <i class="fa-solid fa-users flex bg-gray-300 rounded-full text-black w-14 h-14 justify-center items-center"></i>
+        <i class="fa-regular fa-thumbs-up flex bg-gray-300 rounded-full text-black w-14 h-14 justify-center items-center"></i>
     </div>
 </div>
+
+        </div>
         </section>
     </main>
 
