added responsive Why Choose section

--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
         </div>
 
         <!--three parts div-->
-        <div class="grid grid-cols-3 justify-center gap-6">
+        <div class="grid grid-rows-subgrid lg:grid-cols-3 justify-center gap-6">
 <div>
         <div class="flex items-center gap-6 py-5 text-start">
             <i class="fa-solid fa-users flex bg-gray-300 rounded-full text-black w-14 h-14 justify-center items-center"></i>
