--- a/index.html
+++ b/index.html
@@ -519,7 +519,28 @@
         </section>
     </main>
 
-    <footer></footer>
+    <footer class="bg-black">
+        <div class="flex justify-center">
+        <img src="/images/logo.png">
+        <h1 class="lato font-bold text-4xl text-white">Fruit Burst</h1>
+        </div>
+        <div class="flex justify-center gap-14 lato font-semibold text-lg text-white">
+            <h3>Home</h3>
+            <h3>About Us</h3>
+            <h3>Shop</h3>
+            <h3>All Fruits</h3>
+            <h3>Support</h3>
+            <h3>My Account</h3>
+        </div>
+        <div class="flex justify-center gap-10">
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-brands fa-linkedin-in"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-apple"></i>
+        </div>
+    </footer>
 </body>
 
 </html>
