recorrect dealof section

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <!--Navbar Section-->
         <nav
             class="bg-white lg:bg-btnclr flex justify-evenly items-center rounded-3xl px-1 my-1 lg:my-8 mx-auto lg:mx-56">
-            <div class="lato-medium text-white flex items-center gap-3 invisible lg:visible">
+            <div class="lato font-medium text-white flex items-center gap-3 invisible lg:visible">
                 <h5>Home</h5>
                 <h5>About Us</h5>
                 <h5>Shop</h5>
@@ -107,8 +107,9 @@
             </div>
 
             <div class="invisible lg:visible ">
-                <input type="text" placeholder="   Search here" class="lato-regular bg-white rounded-3xl"> <button
-                    type="submit"> <i class="fa-solid fa-magnifying-glass"></i> </button>
+               
+                <input type="text" placeholder="   Search here"  class="input-field lato-regular bg-white rounded-3xl"/> <button
+                    type="submit">  <i class="fa-solid fa-magnifying-glass"></i> </button>
             </div>
         </nav>
 
@@ -318,7 +319,7 @@
                             <i class="fa-solid fa-star text-[#FBC0A8]"></i>
                             <i class="fa-solid fa-star text-[#FBC0A8]"></i>
                         </div>
-                        <p class="lato font-bold text-lg text-btnclr">Details</p>
+                        <button class="lato font-bold text-lg text-btnclr">Details</button>
                     </div>
 
                     <!--Orange-->
@@ -335,7 +336,7 @@
                             <i class="fa-solid fa-star text-[#FBC0A8]"></i>
                             <i class="fa-solid fa-star text-[#FBC0A8]"></i>
                         </div>
-                        <p class="lato font-bold text-lg text-btnclr">Details</p>
+                        <button class="lato font-bold text-lg text-btnclr">Details</button>
                     </div>
 
                     <!--Red Dragon-->
@@ -352,7 +353,7 @@
                             <i class="fa-solid fa-star text-[#FBC0A8]"></i>
                             <i class="fa-solid fa-star text-[#FBC0A8]"></i>
                         </div>
-                        <p class="lato font-bold text-lg text-btnclr">Details</p>
+                        <button class="lato font-bold text-lg text-btnclr">Details</button>
                     </div>
 
                     <!--Banana-->
@@ -369,7 +370,7 @@
                             <i class="fa-solid fa-star text-[#FBC0A8]"></i>
                             <i class="fa-solid fa-star text-[#FBC0A8]"></i>
                         </div>
-                        <p class="lato font-bold text-lg text-btnclr">Details</p>
+                        <button class="lato font-bold text-lg text-btnclr">Details</button>
                     </div>
                 </div>
                 <div class="flex justify-center py-6">
@@ -519,12 +520,12 @@
         </section>
     </main>
 
-    <footer class="bg-black">
-        <div class="flex justify-center">
+    <footer class="bg-black py-10">
+        <div class="flex justify-center py-3">
         <img src="/images/logo.png">
         <h1 class="lato font-bold text-4xl text-white">Fruit Burst</h1>
         </div>
-        <div class="flex justify-center gap-14 lato font-semibold text-lg text-white">
+        <div class="flex justify-center gap-6 lg:gap-20 lato font-semibold text-lg text-white py-3">
             <h3>Home</h3>
             <h3>About Us</h3>
             <h3>Shop</h3>
@@ -532,13 +533,13 @@
             <h3>Support</h3>
             <h3>My Account</h3>
         </div>
-        <div class="flex justify-center gap-10">
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-youtube"></i>
-            <i class="fa-brands fa-linkedin-in"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-apple"></i>
+        <div class="flex justify-center gap-16 py-3">
+            <i class="fa-brands fa-twitter w-auto h-full text-white"></i>
+            <i class="fa-brands fa-facebook w-auto h-full text-white bg-blue-700 rounded-full"></i>
+            <i class="fa-brands fa-youtube w-auto h-full text-white bg-red-700 rounded-full"></i>
+            <i class="fa-brands fa-linkedin-in w-auto h-full text-white"></i>
+            <i class="fa-brands fa-instagram w-auto h-full text-white"></i>
+            <i class="fa-brands fa-apple w-auto h-full text-white"></i>
         </div>
     </footer>
 </body>
