responsive the Why Choose US section properly

--- a/index.html
+++ b/index.html
@@ -453,15 +453,15 @@
 
         <!--Why Choose Section-->
         <section class="mx-auto lg:mx-56 bg-white">
-        <div class="lato text-center">
+        <div class="text-center">
             <h1 class="lato font-extrabold text-5xl text-black py-3">Why Choose Us</h1>
-            <p class="lato font-medium text-base text-paraclr">Contrary to popular belief, is not simply random text. It has roots in a piece of classical<br> Latin literature from 45 BC, making it over 2000 years old </p>
+            <p class="lato font-medium text-base text-paraclr w-[300px] lg:w-[630px] mx-auto ">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old </p>
         </div>
 
         <!--three parts div-->
-        <div class="grid grid-rows-subgrid lg:grid-cols-3 justify-center gap-6">
+        <div class="grid grid-rows-1 lg:grid-cols-3 justify-center gap-6">
 <div>
-        <div class="flex items-center gap-6 py-5 text-start">
+        <div class="flex flex-col lg:flex-row items-center gap-6 py-5 text-center lg:text-start">
             <i class="fa-solid fa-users flex bg-gray-300 rounded-full text-black w-14 h-14 justify-center items-center"></i>
             <div>
                 <h1 class="lato font-extrabold text-2xl text-black">Dedicated Team</h1>
@@ -469,7 +469,7 @@
                 <p class="lato font-medium text-base text-paraclr">Professional employees are there for you to pick<br> the most amazing and fresh fruits.</p>
             </div>
         </div>
-        <div class="flex items-center gap-6 py-5 text-start">
+        <div class="flex flex-col lg:flex-row items-center gap-6 py-5 text-center lg:text-start">
             <i class="fa-regular fa-heart flex bg-gray-300 rounded-full text-black w-14 h-14 justify-center items-center"></i>
             <div>
                 <h1 class="lato font-extrabold text-2xl text-black">Fresh is Best</h1>
@@ -477,7 +477,7 @@
                 <p class="lato font-medium text-base text-paraclr">Professional employees are there for you to pick<br> the most amazing and fresh fruits.</p>
             </div>
         </div>
-        <div class="flex items-center gap-6 py-5 text-start">
+        <div class="flex flex-col lg:flex-row items-center gap-6 py-5 text-center lg:text-start">
             <i class="fa-solid fa-gift flex bg-gray-300 rounded-full text-black w-14 h-14 justify-center items-center"></i>
             <div>
                 <h1 class="lato font-extrabold text-2xl text-black">Gift Certificates</h1>
@@ -490,7 +490,7 @@
     <img src="images/whychoose1.png">
 </div>
 <div>
-    <div class="flex items-center gap-6 py-5 text-end">
+    <div class="flex flex-col-reverse lg:flex-row items-center gap-6 py-5 text-center lg:text-end">
         <div>
             <h1 class="lato font-extrabold text-2xl text-black">Integrated Supplier</h1>
             <p class="text-2xl">___________</p>
@@ -498,7 +498,7 @@
         </div>
         <i class="fa-brands fa-raspberry-pi flex bg-gray-300 rounded-full text-black w-14 h-14 justify-center items-center"></i>
     </div>
-    <div class="flex items-center gap-6 py-5 text-end">
+    <div class="flex flex-col-reverse lg:flex-row items-center gap-6 py-5 text-center lg:text-end">
         <div>
             <h1 class="lato font-extrabold text-2xl text-black">Sustainable Practice</h1>
             <p class="text-2xl">___________</p>
@@ -506,7 +506,7 @@
         </div>
         <i class="fa-solid fa-ice-cream flex bg-gray-300 rounded-full text-black w-14 h-14 justify-center items-center"></i>
     </div>
-    <div class="flex items-center gap-6 py-5 text-end">
+    <div class="flex flex-col-reverse lg:flex-row items-center gap-6 py-5 text-center lg:text-end">
         <div>
             <h1 class="lato font-extrabold text-2xl text-black">The Benefits Only</h1>
             <p class="text-2xl">___________</p>
