--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="invisible lg:visible ">
                
                 <input type="text" placeholder="   Search here"  class="input-field lato-regular bg-white rounded-3xl"/> <button
-                    type="submit">  <i class="fa-solid fa-magnifying-glass"></i> </button>
+                    type="submit">  <i class="fa-solid fa-magnifying-glass bg-white rounded-full"></i> </button>
             </div>
         </nav>
 
