banner section  editing

--- a/index.html
+++ b/index.html
@@ -116,17 +116,15 @@
         <!--Banner Section-->
         <section class="bg-red-800 mx-auto lg:mx-56">
             <!--Slide_1-->
-            <div id="slide1" class="overflow-hidden relative">
-                <div class="flex justify-center">
-                    <img src="images/banner1.png">
+            <div id="slide1">
+                
+                    <img src="images/banner1.png" class="relative w-full opacity-90">
+                
+                <div class="flex justify-between mx-3">
+                    <i class="fa-solid fa-circle-arrow-left fa-2x bg-black text-gray-700 rounded-full"></i>
+                    <i class="fa-solid fa-circle-arrow-right fa-2x bg-black text-gray-700 rounded-full"></i>
                 </div>
-                <div class="flex justify-between relative bottom-72 mx-3">
-                    <a href="#slide4"><i
-                            class="fa-solid fa-circle-arrow-left bg-black text-gray-700 rounded-full"></i></a>
-                    <a href="#slide2"><i
-                            class="fa-solid fa-circle-arrow-right bg-black text-gray-700 rounded-full"></i></a>
-                </div>
-                <div class="flex flex-col items-center text-center gap-2 relative bottom-44 lg:bottom-96">
+                <div class="flex flex-col items-center text-center gap-2 absolute bottom-96 left-[600px]">
                     <h1 class="lato font-medium lg:font-extrabold text-4xl lg:text-7xl text-white">Exotic tastes at
                         your<br>doorstep</h1>
                     <p class="lato font-medium text-xl">We supply highly quality organic products</p>
@@ -135,7 +133,7 @@
                         Now</button>
                 </div>
                 <div
-                    class="flex justify-between gap-10 bg-white text-center text-black lato lato-bold rounded-lg absolute bottom-80 invisible lg:visible">
+                    class="flex justify-between gap-10 bg-white text-center text-black lato lato-bold rounded-lg invisible lg:visible">
                     <figure> <img src="/images/fruit1.png" class="w-36 h-40">
                         <figcaption>Grape</figcaption>
                     </figure>
