Banner section done with responsive for both desktop and mobile display

--- a/index.html
+++ b/index.html
@@ -114,42 +114,48 @@
         </nav>
 
         <!--Banner Section-->
-        <section class="bg-red-800 mx-auto lg:mx-56">
+        <section class="bg-white mx-auto lg:mx-56 pb-24 relative">
             <!--Slide_1-->
             <div id="slide1">
-                
-                    <img src="images/banner1.png" class="relative w-full opacity-90">
-                
-                <div class="flex justify-between mx-3">
-                    <i class="fa-solid fa-circle-arrow-left fa-2x bg-black text-gray-700 rounded-full"></i>
-                    <i class="fa-solid fa-circle-arrow-right fa-2x bg-black text-gray-700 rounded-full"></i>
+                <!--image part-->
+                    <div class="bg-black">
+                        <img src="images/banner1.png" class="opacity-60 w-full">
+                    </div>
+                <!--icon part-->
+                <div class="flex justify-between relative bottom-24 lg:bottom-80 mx-10 lg:mx-24">
+                    <i class="fa-solid fa-circle-arrow-left fa-2x bg-white text-black rounded-full"></i>
+                    <i class="fa-solid fa-circle-arrow-right fa-2x bg-white text-black rounded-full"></i>
                 </div>
-                <div class="flex flex-col items-center text-center gap-2 absolute bottom-96 left-[600px]">
-                    <h1 class="lato font-medium lg:font-extrabold text-4xl lg:text-7xl text-white">Exotic tastes at
+            <div class="absolute top-10 lg:top-32 -left-36 lg:left-36">
+                <!--written part-->
+                <div class="flex flex-col items-center text-center gap-0 lg:gap-2 ">
+                    <h1 class="lato font-medium lg:font-extrabold text-2xl lg:text-7xl text-white">Exotic tastes at
                         your<br>doorstep</h1>
-                    <p class="lato font-medium text-xl">We supply highly quality organic products</p>
+                    <p class="lato font-medium text-sm lg:text-xl text-white py-2 lg:py-6">We supply highly quality organic products</p>
                     <button
                         class="btn btn-xs bg-btnclr text-white lato font-medium lg:font-extrabold text-sm lg:text-xl sm:btn-sm md:btn-md lg:btn-lg">Shop
                         Now</button>
                 </div>
-                <div
-                    class="flex justify-between gap-10 bg-white text-center text-black lato lato-bold rounded-lg invisible lg:visible">
-                    <figure> <img src="/images/fruit1.png" class="w-36 h-40">
+                <!--Fruit Box part-->
+                <div class="flex justify-evenly gap-28 items-center bg-white text-center text-black lato lato-bold rounded-lg invisible lg:visible w-100/4 h-52 my-20">
+                    <figure> <img src="/images/fruit1.png">
                         <figcaption>Grape</figcaption>
                     </figure>
-                    <figure> <img src="/images/fruit2.png" class="w-36 h-40">
+                    <figure> <img src="/images/fruit2.png">
                         <figcaption>Orange</figcaption>
                     </figure>
-                    <figure> <img src="/images/fruit3.png" class="w-36 h-40">
+                    <figure> <img src="/images/fruit3.png">
                         <figcaption>Mango</figcaption>
                     </figure>
-                    <figure> <img src="/images/fruit4.png" class="w-36 h-40">
+                    <figure> <img src="/images/fruit4.png">
                         <figcaption>Strawberry</figcaption>
                     </figure>
-                    <figure> <img src="/images/fruit5.png" class="w-36 h-40">
+                    <figure> <img src="/images/fruit5.png">
                         <figcaption>Pomegranate</figcaption>
                     </figure>
                 </div>
+            </div>
+
             </div>
 
             <!--Slide-2
