editing meet the team section

--- a/index.html
+++ b/index.html
@@ -384,25 +384,28 @@
             </div>
         </section>
 
-        <!--Meet the team Section
-        <section class="mx-auto lg:mx-56 bg-white">
-            <div class="relative lg:absolute bg-white">
-                <div class="w-auto lg:w-full h-[1340px] lg:h-full"><img src="/images/banner1.png" class="opacity-70"></div>
-            <div class="relative lg:absolute lg:top-48 lg:left-56">
-                    <div class="text-center w-auto">
-                    <h1 class="lato font-extrabold text-5xl text-white">Meet the team section</h1>
-                    <p class="lato font-medium text-base text-white">Contrary to popular belief, is not simply random
+        <!--Meet the team Section-->
+        <section class="mx-auto lg:mx-56 bg-white relative">
+            <div>
+                <div class="bg-black">
+                    <img src="/images/banner1.png" class="w-full h-screen lg:h-full opacity-60">
+                </div>
+                    <!--Written Part-->
+                <div class="absolute top-6 left-32 text-center text-white w-auto">
+                    <h1 class="lato font-extrabold text-2xl lg:text-5xl">Meet the team section</h1>
+                    <p class="lato font-medium text-sm lg:text-bas">Contrary to popular belief, is not simply random
                         text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000
-                        years old.</p> </div>
+                        years old.</p>
+                </div>
 
-                    <!--Team members slide-- >
+                    <!--Team members Part-->
                     <div class="flex justify-evenly flex-col lg:flex-row">
-                        <div class="text-center">
+                        <div class="text-center text-pink-900">
                         <div class="flex justify-center">
                             <img src="/images/member1.png" class="rounded-full"></img>
                         </div>
-                        <h1 class="lato font-bold text-2xl text-white">Awlad Hussain</h1>
-                        <p class="lato font-medium text-base text-white">Fruit Expert</p>
+                        <h1 class="lato font-bold text-2xl">Awlad Hussain</h1>
+                        <p class="lato font-medium text-base">Fruit Expert</p>
                         <div>
                             <i class="fa-brands fa-facebook bg-white text-btnclr rounded-full"></i>
                             <i class="fa-brands fa-twitter bg-btnclr text-white rounded-full"></i>
@@ -448,12 +451,9 @@
                             <i class="fa-brands fa-linkedin-in bg-btnclr text-white rounded-full"></i>
                         </div>
                         </div>
-
                     </div>
-                </div>
-            </div>
         </div>
-        </section> -->
+        </section>
 
         <!--Why Choose Section-->
         <section class="mx-auto lg:mx-56 bg-white">
